# Faustok

./: .gitignore  Cargo.toml  LICENSE  README  TokenExample.json  User.json
src/: config.rs  database.rs  main.rs  misc.rs  tiklydown.rs
