[package]
name = "faustok"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = "0.6.1"
regex = "1.10.6"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread", "sync"] }

[profile.release]
strip = true
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"

[[bin]]
name = "faustok"
path = "src/main.rs"

[lib]
name = "tiklydown"
path = "src/tiklydown.rs"